# rust2seq

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
rust2seq/: Cargo.toml
rust2seq-driver/: Cargo.toml  build.rs
rust2seq-driver/src/: callbacks.rs  discover.rs  lib.rs  plugin.rs  walker.rs
rust2seq-driver/tests/: smoke.rs
rust2seq-example/: Cargo.toml  README.md
rust2seq-example/diagrams/: alpha_protocol.puml  beta_protocol.puml  cross_module_qualified.puml  oauth_authorization_code.puml
rust2seq-example/src/: lib.rs
rust2seq-macros/: Cargo.toml
rust2seq-macros/src/: lib.rs
rust2seq/src/: config.rs  emit.rs  lib.rs  model.rs
rust2seq/tests/: emitter.rs
